--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+
     <title>XSS</title>
 
     <link rel="stylesheet" type="text/css" href="vendors/bootstrap.min.css">
@@ -13,13 +13,14 @@
 </head>
 
 <body style="background-image: url(img/united-squares.png); color: #ffffff;">
+    <script type="text/javascript" src="./purify.js"></script>
 
     <div class="container" style="margin-bottom: 1%;">
         <img src="img/tea.png" style="width: 130px; float:right; position:relative; left:50px;">
         <div style="background-color: rgba(32, 163, 158, 0.8); margin-top: 2%; border-radius: 5px; padding: 1% 5%;">
             <!-- XSS vulnerability #1
 
-                    Hack hint: typing <script>alert(1)</script> in the url bar won't work, 
+                    Hack hint: typing <script>alert(1)</script> in the url bar won't work,
                     but unfortunately, typing something like <img src=" " onerror="alert(1)"> will! -->
 
             <p class="text-center" id="welcome-text"></p>
@@ -48,7 +49,8 @@
                 Anyway, I'm not looking for someone to share pies with... I need someone who can HTML-format my
                 speeches, like making my keywords <strong>bold</strong> and...&nbsp;hum, other modern machine stuff.
                 Could you do that?<br>
-                <strong>You:</strong> Sure!</p>
+                <strong>You:</strong> Sure!
+            </p>
 
             <div class="row">
 
@@ -89,7 +91,7 @@
 
         // XSS vulnerability #1
 
-        userParam = params.get("name");
+        userParam = DOMPurify.sanitize(params.get("name"));
         userName = "applicant";
 
         if (userParam !== null) {
@@ -106,7 +108,7 @@
         input.addEventListener("input", updateValue);
 
         function updateValue(e) {
-            log.innerHTML = e.target.value;
+            log.innerText = e.target.value;
         }
 
         //  XSS vulnerability #3
@@ -118,12 +120,12 @@
         showButton.addEventListener("click", showHTML);
 
         function showHTML() {
-            htmlOutput.innerHTML = htmlInput.value;
+            htmlOutput.innerText = htmlInput.value;
         }
 
         //  XSS vulnerability #4
 
-        const redir = params.get("goto");
+        const redir = encodeURIComponent(params.get("goto"));
         if (redir !== null && redir !== "null") {
             document.location = redir;
         }
